--- a/templates/activityApp/add_user.html
+++ b/templates/activityApp/add_user.html
@@ -29,9 +29,10 @@ $("#myform").submit(function (e) {
 		data : $(this).serialize(),
 		success : function(json){
 		  alert(json.msg);
+      $("#result").text(json.msg);
 		},
 		error : function(xhr,errmsg,err) {
-		  alert("eerr");
+		 console.log(xhr.responseText);
 		}
 	});
 });
