--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -10,12 +10,16 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{%url 'add_user'%}">Add User</a>
+            <a class="nav-link" href="{%url 'add_user'%}">New User</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{%url 'add_activity'%}">Add Activity</a>
+            <a class="nav-link" href="{%url 'add_activity'%}">New Activity</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{%url 'get_data_endpoint'%}">Api EndPoint</a>
           </li>
         </ul>
+        
 
         <ul class="navbar-nav mt-2 mt-lg-0">
           <li class="nav-item">
