--- a/templates/activityApp/login.html
+++ b/templates/activityApp/login.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html'%}
 {%block content%}
 <div class="row">
-	<div class="col-10 col-xs-10 col-sm-6 col-md-6 col-xl-6 mx-auto mx-xs-auto col-sm-auto col-md-auto shadow p-3 mb-2 bg-white rounded">
+	<div class="col-12 col-xs-12 col-sm-10 col-md-6 col-xl-6 mx-auto mx-xs-auto col-sm-auto col-md-auto shadow p-3 mb-2 bg-white rounded">
 	    
         <h4 id="result" class="log shadow-sm p-3 mb-2 bg-white rounded text-center">Check My Portal</h4>
         
@@ -9,18 +9,23 @@
         {%csrf_token%}
             <div class="form-group">
               <label for="name">Email</label>
-              <input placeholder="enter email" class="form-control" type="text" id="username" name="username">
+              <input placeholder="enter email" class="form-control rounded-pill" type="text" id="username" name="username">
             </div>
             <div class="form-group">
               <label for="email">Password</label>
-              <input placeholder="enter password" class="form-control" type="password" id="password" name="password">
+              <input placeholder="enter password" class="form-control rounded-pill" type="password" id="password" name="password">
             </div>	
-            <input class="btn btn-primary" id="login" style="background:orange" type="submit" value="Login" />
+            <input class="form-control btn btn-primary rounded-pill " id="login" style="background:orange" type="submit" value="Login" />
         </form>
 	</div>
 </div>
         
 <script>
+
+$(document).ajaxStart(function(){
+  $("#result").text("authenticating....");
+});
+
 $("#myform").submit(function (e) {	
     e.preventDefault();
 	$.ajax({
@@ -30,15 +35,10 @@ $("#myform").submit(function (e) {
 		success : function(json){
 		  if (json.is_logged_in_admin) {
 		  window.location.href="{%url 'dashboard'%}"
-		  }else{
-		  alert("wrong login credentials")
-		  }
-		  if(json.error_message){
-		  
 		  }
 		},
 		error : function(xhr,errmsg,err) {
-		  $('#result').html(errmsg).removeClass("alert-info").addClass("alert-warning");
+			$("#result").text("failed!!");
 		}
 	});
 });
