--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -1,29 +1,51 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">User Activity App</a>
+  <div class="container">
+  <a class="navbar-brand" href="#">Activity App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'add_user'%}">New User</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'add_activity'%}">New Activity</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{%url 'get_data_endpoint'%}">Api EndPoint</a>
-          </li>
-        </ul>
-        
 
-        <ul class="navbar-nav mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
-          </li>
-        </ul>
+      {%if request.user.is_authenticated%}
+
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'add_user'%}">Register User</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'add_activity'%}">Register Activity</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'get_data_endpoint'%}">Json Api EndPoint</a>
+        </li>
+      </ul>
+      
+
+      <ul class="navbar-nav mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'Logout'%}">Logout</a>
+        </li>
+      </ul>
+
+      {%else%}
+
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+      </ul>
+      
+
+      <ul class="navbar-nav mt-2 mt-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'user_login'%}">Login</a>
+        </li>
+      </ul>
+
+      {%endif%}
+    </div>
   </nav>
