--- a/templates/snippets/navbar.html
+++ b/templates/snippets/navbar.html
@@ -1,4 +1,9 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<style>
+  .bg-primary {
+    background-color: #fe6239!important;
+}
+</style>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
   <div class="container">
   <a class="navbar-brand" href="#">Activity App</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,7 +25,7 @@
           <a class="nav-link" href="{%url 'add_activity'%}">Register Activity</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{%url 'get_data_endpoint'%}">Json Api EndPoint</a>
+          <a class="nav-link" href="{%url 'json_response'%}">Json Api EndPoint</a>
         </li>
       </ul>
       
@@ -28,6 +33,9 @@
       <ul class="navbar-nav mt-2 mt-lg-0">
         <li class="nav-item">
           <a class="nav-link" href="{%url 'Logout'%}">Logout</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{%url 'docs'%}">Docs</a>
         </li>
       </ul>
 
